bin_data_macros/tests/ui/encode-wrong-type.stderr
error[E0277]: the trait bound `&str: View<u32>` is not satisfied
  --> tests/ui/encode-wrong-type.rs:7:29
   |
4  | / bin_data! {
5  | |     #[bin_data(endian = Endian::Little)]
6  | |     pub struct WrongType {
7  | |         #[bin_data(encode = "u32 expected")]
   | |                             ^^^^^^^^^^^^^^ the trait `View<u32>` is not implemented for `&str`
...  |
11 | |     }
12 | | }
   | |_- required by a bound introduced by this call
   |
   = help: the following other types implement trait `View<T>`:
             <&T as View<Box<T>>>
             <&T as View<T>>
             <&[T] as View<Vec<T>>>
             <SliceView<'a, T, P> as View<Box<[U]>>>
             <SliceView<'a, T, P> as View<Vec<U>>>
             <SliceViewRef<'a, T, P> as View<Box<[U]>>>
             <SliceViewRef<'a, T, P> as View<Vec<U>>>
             <f32 as View<f32>>
           and $N others
note: required by a bound in `assert_is_view`
  --> $WORKSPACE/bin_data/src/data.rs
   |
   | pub fn assert_is_view<T: ?Sized, U: View<T>>(x: U) -> U { x }
   |                                     ^^^^^^^ required by this bound in `assert_is_view`

error[E0599]: the method `encode_with` exists for reference `&str`, but its trait bounds were not satisfied
 --> tests/ui/encode-wrong-type.rs:8:13
  |
8 |         let temporary: u32,
  |             ^^^^^^^^^
  |
  = note: the following trait bounds were not satisfied:
          `str: Encode<_>`
          which is required by `&str: Encode<_>`

error[E0277]: the trait bound `str: NamedArgs<bin_data::stream::dir::Write>` is not satisfied
 --> tests/ui/encode-wrong-type.rs:8:13
  |
8 |         let temporary: u32,
  |             ^^^^^^^^^ the trait `NamedArgs<bin_data::stream::dir::Write>` is not implemented for `str`
  |
  = help: the following other types implement trait `NamedArgs<Dir>`:
            <&'a T as NamedArgs<bin_data::stream::dir::Write>>
            <Be<T> as NamedArgs<Dir>>
            <Box<T> as NamedArgs<bin_data::stream::dir::Write>>
            <Box<[T]> as NamedArgs<bin_data::stream::dir::Read>>
            <Le<T> as NamedArgs<Dir>>
            <SliceView<'a, A, P> as NamedArgs<bin_data::stream::dir::Write>>
            <SliceViewRef<'a, A, P> as NamedArgs<bin_data::stream::dir::Write>>
            <Vec<T> as NamedArgs<bin_data::stream::dir::Read>>
          and $N others
  = note: required for `&str` to implement `NamedArgs<bin_data::stream::dir::Write>`
